Fixed: Layout issues with filters and inputs

--- a/www/comps/app.css
+++ b/www/comps/app.css
@@ -624,19 +624,22 @@ table td.maximum{
 }
 .default-inputs input,
 .default-inputs select,
-.default-inputs textarea{
+.default-inputs textarea,
+.default-inputs .input-custom{
 	min-width:150px;
 	max-width:300px;
 }
 .default-inputs input.short,
 .default-inputs select.short,
-.default-inputs textarea.short{
+.default-inputs textarea.short,
+.default-inputs .input-custom.short{
 	min-width:50px;
 	max-width:100px;
 }
 .default-inputs input.long,
 .default-inputs select.long,
-.default-inputs textarea.long{
+.default-inputs textarea.long,
+.default-inputs .input-custom.long{
 	min-width:300px;
 	max-width:600px;
 }
